Add. scss사용하기 위한 parcel

--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "homepage": "https://github.com/hayoung123/fe-w3-shopping#readme",
   "dependencies": {
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "sass": "^1.32.8"
   }
 }
