--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "concurrently": "^6.0.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1"
   },
   "devDependencies": {},
