--- a/beemo/package.json
+++ b/beemo/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "predeploy-webpack": "npx webpack",
+    "start": "npm run predeploy-webpack && node ./bin/www"
   },
   "dependencies": {
     "consolidate": "^0.16.0",
@@ -16,6 +17,12 @@
     "swig": "^1.4.2"
   },
   "devDependencies": {
-    "node-sass": "^5.0.0"
+    "css-loader": "^5.0.2",
+    "cssnano": "^4.1.10",
+    "node-sass": "^5.0.0",
+    "sass-loader": "^11.0.1",
+    "style-loader": "^2.0.0",
+    "webpack": "^5.23.0",
+    "webpack-cli": "^4.5.0"
   }
 }
