--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "nodemon app.js",
+    "build:sass": "sass --watch --style compressed src/sass:public/stylesheets"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
