--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "nodemon app.js",
-    "build:sass": "sass --watch --style compressed src/sass:public/stylesheets"
+    "build:sass": "sass --watch src/sass:public/stylesheets"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
