Fix: scss 동작하게 수정 (npm run start하면 scss 파일 컴파일 후 js webpack번들링 후 실행하게 설정)

--- a/beemo/package.json
+++ b/beemo/package.json
@@ -3,8 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "predeploy-scss": "sass public/stylesheets/scss:public/stylesheets/css",
     "predeploy-webpack": "npx webpack",
-    "start": "npm run predeploy-webpack && node ./bin/www"
+    "start": "sass public/stylesheets/scss:public/stylesheets/css && npm run predeploy-webpack && node ./bin/www"
   },
   "dependencies": {
     "consolidate": "^0.16.0",
