--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "fe-w3-shopping",
   "version": "1.0.0",
   "description": "## 미션요구사항",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon ./bin/www",
+    "build:sass": "sass --watch public/sass:public/css"
   },
   "repository": {
     "type": "git",
