--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
   "dependencies": {
     "concurrently": "^6.0.0",
     "cors": "^2.8.5",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "webpack": "^5.24.0",
+    "webpack-cli": "^4.5.0"
   },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    
+    "build": "webpack --mode development  --config ./frontend/webpack.config.js",
     "start": "concurrently \"node backend/index.js\" \"node frontend/index.js\""
   },
   "repository": {
