--- a/package.json
+++ b/package.json
@@ -2,15 +2,16 @@
   "name": "fe-w3-shopping",
   "version": "1.0.0",
   "description": "",
-  "type": "module",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build" : "webpack",
+    "start": "npm run build && node server.js "
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/codesqurd-master-DD/fe-w3-shopping.git",
-    "start" : "node server.js"
+    "url": "git+https://github.com/codesqurd-master-DD/fe-w3-shopping.git"
   },
   "author": "DD",
   "license": "ISC",
@@ -20,5 +21,14 @@
   "homepage": "https://github.com/codesqurd-master-DD/fe-w3-shopping#readme",
   "dependencies": {
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "babel-register": "^6.26.0",
+    "css-loader": "^5.0.2",
+    "mini-css-extract-plugin": "^1.3.8",
+    "sass": "^1.32.8",
+    "sass-loader": "^11.0.1",
+    "webpack": "^5.24.0",
+    "webpack-cli": "^4.5.0"
   }
 }
