--- a/package.json
+++ b/package.json
@@ -6,14 +6,16 @@
   "dependencies": {
     "concurrently": "^6.0.0",
     "cors": "^2.8.5",
+    "css-loader": "^5.0.2",
     "express": "^4.17.1",
+    "sass-loader": "^11.0.1",
+    "style-loader": "^2.0.0",
     "webpack": "^5.24.0",
     "webpack-cli": "^4.5.0"
   },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    
     "build": "webpack --mode development  --config ./frontend/webpack.config.js",
     "start": "concurrently \"node backend/index.js\" \"node frontend/index.js\""
   },
