--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "fe-w3-shopping",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon app",
-    "compile:sass": "node-sass src/style/main.scss src/style/style.css -w"
+    "compile:sass": "node-sass src/style/main.scss src/style/shoppingHow.css -w",
+    "build:sass": "sass src/style/main.scss src/style/shoppingHow.css"
   },
   "repository": {
     "type": "git",
@@ -24,6 +24,8 @@
     "nodemon": "^2.0.7"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "ejs": "^3.1.6",
+    "express": "^4.17.1",
+    "sass": "^1.32.8"
   }
 }
