Modify. app.js 경로 수정

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "shoppinghow-clone",
   "version": "1.0.0",
   "description": "codesquad masters FE week3",
-  "main": "src/js/app.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon app",
