--- a/package.json
+++ b/package.json
@@ -22,5 +22,12 @@
     "express-generator": "^4.16.1",
     "parcel": "^1.12.4",
     "parcel-bundler": "^1.12.4"
-  }
+  },
+  "browserslist": [
+    "last 3 and_chr versions",
+    "last 3 chrome versions",
+    "last 3 opera versions",
+    "last 3 ios_saf versions",
+    "last 3 safari versions"
+  ]
 }
