--- a/package.json
+++ b/package.json
@@ -4,16 +4,15 @@
   "description": "codesquad masters FE week3",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon app",
-    "build:sass": "sass sass:src/css"
+    "build:sass": "sass public/scss:public/css"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/dyongdi/fe-w3-shopping.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Autumn",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/dyongdi/fe-w3-shopping/issues"
