--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "fe-w3-shopping",
   "version": "1.0.0",
   "description": "",
-  "main": "src/js/main.js",
+  "main": "shopping-how",
   "scripts": {
     "dev": "webpack --watch --mode development",
     "prod": "webpack --mode production",
@@ -21,6 +21,8 @@
   "homepage": "https://github.com/cchoongh/fe-w3-shopping#readme",
   "devDependencies": {
     "css-loader": "^5.0.2",
+    "express": "^4.17.1",
+    "file-loader": "^6.2.0",
     "node-sass": "^5.0.0",
     "sass-loader": "^11.0.1",
     "style-loader": "^2.0.0",
