--- a/beemo/package.json
+++ b/beemo/package.json
@@ -3,14 +3,17 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "watch-scss": "sass --watch public/stylesheets/scss:public/stylesheets/css",
+    "watch:scss": "sass --watch public/stylesheets/scss:public/stylesheets/css",
+    "watch:webpack": "npx webpack",
     "predeploy-scss": "sass public/stylesheets/scss:public/stylesheets/css",
-    "predeploy-webpack": "npx webpack",
-    "start": "npm run predeploy-scss && npm run predeploy-webpack && node ./bin/www"
+    "server:start": "nodemon ./bin/www",
+    "start": "node tools/start"
   },
   "dependencies": {
+    "concurrently": "^6.0.0",
     "consolidate": "^0.16.0",
     "cookie-parser": "~1.4.4",
+    "cross-fetch": "^3.0.6",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
