ADD start option in package.json
* ADD scripts option ( nodemon , watch scss)

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "dev": "nodemon app.js"
+    "dev": "nodemon app.js",
+    "scss" :"node-sass --watch scss --output public/css",
+    "start": "concurrently -n 'dev,scss' -c 'bgCyan.bold,bgBlue.bold' 'npm run dev' 'npm run scss'"
   },
   "repository": {
     "type": "git",
