ADD SCSS style in header
* ADD logo image in main__logo__box
* ADD search__box style

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nodemon app.js",
     "scss" :"node-sass --watch scss --output public/css",
-    "start": "concurrently -n 'dev,scss' -c 'bgCyan.bold,bgBlue.bold' 'npm run dev' 'npm run scss'"
+    "start": "concurrently -n 'dev,scss' -c 'bgGreen.bold,bgBlue.bold' 'npm run dev' 'npm run scss'"
   },
   "repository": {
     "type": "git",
