--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "clean-webpack-plugin": "^3.0.0",
     "concurrently": "^6.0.0",
     "cors": "^2.8.5",
     "css-loader": "^5.0.2",
     "express": "^4.17.1",
+    "html-webpack-plugin": "^5.2.0",
+    "sass": "^1.32.8",
     "sass-loader": "^11.0.1",
     "style-loader": "^2.0.0",
     "webpack": "^5.24.0",
-    "webpack-cli": "^4.5.0"
+    "webpack-cli": "^4.5.0",
+    "webpack-dev-server": "^3.11.2"
   },
   "devDependencies": {},
   "scripts": {
