--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --mode development  --config ./frontend/webpack.config.js",
+    "dev": "webpack serve --config ./frontend/webpack.config.js",
     "start": "concurrently \"node backend/index.js\" \"node frontend/index.js\""
   },
   "repository": {
