--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --mode development  --config ./frontend/webpack.config.js",
     "dev": "webpack serve --config ./frontend/webpack.config.js",
-    "start": "concurrently \"node backend/index.js\" \"node frontend/index.js\""
+    "start": "concurrently \"node backend/index.js\" \"node frontend/public/index.js\""
   },
   "repository": {
     "type": "git",
