--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "start-scss": "sass --watch public/scss:public/stylesheets",
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
@@ -11,6 +12,7 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
+    "node-sass-middleware": "^0.11.0",
     "nodemon": "^2.0.7",
     "pug": "2.0.0-beta11"
   }
