[CHORE]Ignore css files

--- a/shopping/.gitignore
+++ b/shopping/.gitignore
@@ -1,1 +1,7 @@
 node_modules
+public/stylesheets/components
+public/stylesheets/main
+public/stylesheets/header
+public/stylesheets/style.css
+public/stylesheets/style.css.map
+ 
